# stm32-firmware-stack

./: .clang-format  .clang-tidy  .gdbinit  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  README.md  \  setup.sh
.github/workflows/: build.yml  static-analysis.yml
app/: CMakeLists.txt
app/src/: main.c
bsp/: CMakeLists.txt
bsp/include/: gpio.h  spi.h  uart.h
bsp/src/: gpio.c  spi.c  uart.c
cmake/: arm-none-eabi.cmake  host.cmake  utils.cmake
core/: CMakeLists.txt
core/include/: common.h  syscall.h  system_stm32f4xx.h
core/linker/: application.ld
core/src/: assert_handler.c  startup.c  syscall.c  system_stm32f4xx.c
docs/: debugging.md
tests/: CMakeLists.txt  cmock.yml  generate_mocks.sh
tests/unit/: CMakeLists.txt
tools/: ci-local.sh
tools/openocd/: nucleo_f446re.cfg
